# Group-Project.The-Surveys-and-Testing-App

./: .gitignore  Dockerfile  Group-Project.The-Surveys-and-Testing-App.sln  README.md  docker-compose.yml  go.mod  nginx.conf  package.json  packeg.json  server.js  users.json
AuthorModule/: CMakeLists.txt  Dockerfile
AuthorModule/src/: AuthLogic.hpp  Permissions.hpp  main.cpp
TelegramBot/: Dockerfile  Program.cs  TelegramBot.csproj  TelegramBot.sln  cert.pem  cloudflare-tunnel.json  config.yml  docker-compose.yml  nginx.conf
TestAppLogic/: .env  Dockerfile  go.mod  main.go
TestAppLogic/handlers/: auth.go  handlers.go
TestAppLogic/init/: migrations.sql
TestAppLogic/models/: models.go
init/: migrations.sql
main-module/: main.go
main-module/auth/: auth.go
main-module/config/: config.go
main-module/db/: db.go  models.go
main-module/handlers/: course.go  user.go
sait/: index.html  index2.html  style.css
testapplogic/: docker-compose.yml  main.go
testapplogic/config/: config.go
testapplogic/db/: db.go  models.go
testapplogic/handlers/: auth.go  handlers.go
testapplogic/init/: migrations.sql
testapplogic/models/: models.go
web client/: server.js
web client/sait/: index.html  index2.html
